generated-tests/tests/snapshots/rust/test_generated_field_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type { field1: x4 } = value { }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (struct_pattern
          (type_identifier)
          (field_pattern
            (field_identifier)
            (identifier x4)
          )
        )
        (identifier value)
      )
      (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "Type",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 12,
            },
        },
        Usage {
            name: "x4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 25,
            },
        },
        Usage {
            name: "value",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 30,
                end_line: 1,
                end_column: 35,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
