generated-tests/tests/snapshots/rust/test_generated_foreign_mod_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
extern "C" { fn extern_fn(); }

AST:
(source_file
  (foreign_mod_item
    (extern_modifier
      (string_literal
        (string_content)
      )
    )
    (declaration_list
      (function_signature_item
        (identifier extern_fn)
        (parameters)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "extern_fn",
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 26,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "extern_fn",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 26,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
