generated-tests/tests/snapshots/rust/test_generated_function_signature_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn4() -> i32;

AST:
(source_file
  (function_signature_item
    (identifier test_fn4)
    (parameters)
    (primitive_type)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn4",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 12,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "test_fn4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 12,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
