generated-tests/tests/snapshots/rust/test_generated_function_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let func: fn(i32) -> i32 = |x| x + 1;

AST:
(source_file
  (let_declaration
    (identifier func)
    (function_type
      (parameters
        (primitive_type)
      )
      (primitive_type)
    )
    (closure_expression
      (closure_parameters
        (identifier x)
      )
      (binary_expression
        (identifier x)
        (integer_literal)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "func",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "x",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 32,
            end_line: 1,
            end_column: 33,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
