generated-tests/tests/snapshots/rust/test_generated_generic_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x { Vec::<T>::new() => x6, _ => x6 }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier x)
      (match_block
        (match_arm
          (match_pattern
            (tuple_struct_pattern
              (scoped_identifier
                (generic_type
                  (type_identifier)
                  (type_arguments
                    (type_identifier)
                  )
                )
                (identifier new)
              )
            )
          )
          (identifier x6)
        )
        (match_arm
          (match_pattern)
          (identifier x6)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 8,
            },
        },
        Usage {
            name: "Vec",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 14,
            },
        },
        Usage {
            name: "T",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "new",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 21,
                end_line: 1,
                end_column: 24,
            },
        },
        Usage {
            name: "x6",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 30,
                end_line: 1,
                end_column: 32,
            },
        },
        Usage {
            name: "x6",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 39,
                end_line: 1,
                end_column: 41,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
