generated-tests/tests/snapshots/rust/test_generated_identifier.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
identifier

AST:
(source_file
  (ERROR
    (identifier identifier)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "identifier",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 11,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
